[package]
name = "iso80s"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package."*"]
opt-level = 3

[features]
inspector = ["bevy-inspector-egui"]

[dependencies]
# bevy = { version = "0.7" }
bevy = { version = "0.10", features = ["dynamic_linking"] }
bevy-inspector-egui = { version = "0.18", optional = true }
bevy_prototype_debug_lines = "0.10"
# bevy_mouse_tracking_plugin = "0.5"
bevy_mouse_tracking_plugin = {git = "https://github.com/JoJoJet/bevy-mouse-tracking.git", branch="bevy-0-10"}
bevy_egui = "0.20"
egui_extras = "0.18"
clap = { version = "3", features = ["derive"] }
lazy_static = "*"
rand = "0.8"
serde_yaml = "0.8"
itertools = "0.10"
